开启 blog，增加注释，补充 pre scripts，补充 .gitlab-ci.yml 打包（测试）

--- a/blog/2021-08-01-mdx-blog-post.mdx
+++ b/blog/2021-08-01-mdx-blog-post.mdx
@@ -1,7 +1,11 @@
 ---
+# slug 代表 URL
 slug: mdx-blog-post
-title: MDX Blog Post
+# title 代表 页面标题
+title: MDX Blog Post（示例）
+# 代表作者，数据从 authors.yml 中获取
 authors: [slorber]
+# 代表文章标签
 tags: [docusaurus]
 ---
 
